Center align, (hopefully) fix inline video play on mobile. Edit some text

--- a/styling.css
+++ b/styling.css
@@ -11,6 +11,7 @@ body {
     font-size: 130%;
     color: var(--normal);
     max-width: 80ch;
+    margin: 0 auto;
 }
 
 figure {
